--- a/Windows/Accounts.ui
+++ b/Windows/Accounts.ui
@@ -136,6 +136,9 @@ color: black</string>
       <string notr="true">background-color: white;
 color: black</string>
      </property>
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
     </widget>
     <widget class="QLineEdit" name="LinkedinUsernameBox">
      <property name="geometry">
