--- a/Windows/Accounts.ui
+++ b/Windows/Accounts.ui
@@ -35,7 +35,7 @@ background-color: rgb(61, 66, 107);
    </property>
    <widget class="QWidget" name="LinkedinTab">
     <attribute name="title">
-     <string>LinkedIn</string>
+     <string>Linkedin</string>
     </attribute>
     <widget class="QLabel" name="LinkedinUseranme">
      <property name="geometry">
@@ -189,13 +189,126 @@ border-width: 3px;
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="tab_2">
+   <widget class="QWidget" name="TwitterTab">
     <attribute name="title">
-     <string>Tab 2</string>
+     <string>Twitter</string>
     </attribute>
+    <widget class="QLabel" name="TwitterUseranme">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>150</y>
+       <width>231</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Cascadia Mono Light</family>
+       <pointsize>26</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
+     <property name="text">
+      <string>Username:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="TwitterUsernameBox">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>170</y>
+       <width>301</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: white;
+color: black</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="TwitterPassword">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>360</y>
+       <width>231</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Cascadia Mono Light</family>
+       <pointsize>26</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
+     <property name="text">
+      <string>Password:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="TwitterPasswordBox">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>380</y>
+       <width>301</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: white;
+color: black</string>
+     </property>
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="TwitterSaveButton">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>530</y>
+       <width>131</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Cascadia Code SemiLight</family>
+       <pointsize>24</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+background-color: rgb(89,96,156);
+border:none;
+color:white;
+}
+
+QPushButton:Hover{
+border-style: solid;
+border-color:white;
+border-width: 3px;
+}
+
+</string>
+     </property>
+     <property name="text">
+      <string>Save</string>
+     </property>
+    </widget>
    </widget>
   </widget>
-  <widget class="QLabel" name="LinkedinBackArrowLabel">
+  <widget class="QLabel" name="AccountsBackArrowLabel">
    <property name="geometry">
     <rect>
      <x>10</x>
