--- a/Windows/LinkedinPoster.ui
+++ b/Windows/LinkedinPoster.ui
@@ -46,6 +46,9 @@ background-color: rgb(61, 66, 107);
       <height>22</height>
      </rect>
     </property>
+    <property name="keyboardTracking">
+     <bool>false</bool>
+    </property>
     <property name="calendarPopup">
      <bool>true</bool>
     </property>
