--- a/Windows/LinkedinPoster.ui
+++ b/Windows/LinkedinPoster.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>LinkedinPoster</string>
   </property>
   <widget class="QWidget" name="BackgroundLinkedin" native="true">
    <property name="geometry">
