--- a/Windows/PosterMainWindow.ui
+++ b/Windows/PosterMainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Poster</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget#Poster{
@@ -47,6 +47,9 @@ background-color: rgb(99, 110, 114);
    </property>
    <property name="currentIndex">
     <number>-1</number>
+   </property>
+   <property name="tabsClosable">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QWidget" name="SecondaryBackgroundPoster" native="true">
